--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -28,7 +28,7 @@
         </ng-container>        
     </div>
     <div class="col">
-        <button type="button" class="btn btn-primary btn-sm">Hozzáad</button>
+        <button (click)="addEmployee()" type="button" class="btn btn-primary btn-sm">Hozzáad</button>
       
     </div>
 </div>
@@ -53,7 +53,7 @@
         </ng-container>        
     </div>
     <div class="col">
-        <button type="button" class="btn btn-primary btn-sm">Módosít</button>
-        <button type="button" class="btn btn-danger btn-sm ms-2">Töröl</button>
+        <button (click)="updateEmployee(employee)" type="button" class="btn btn-primary btn-sm">Módosít</button>
+        <button (click)="deleteEmployee(employee)" type="button" class="btn btn-danger btn-sm ms-2">Töröl</button>
     </div>
 </div>
